<resources>
    <string name="app_name">HW2</string>
    <string name="image">image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try Again</string>
    <string name="view_history">View History</string>
    <string name="view_home">View Home</string>
    <string name="todo">TODO</string>
    <string name="you_me">You ❤ Me</string>
    <string name="_100">100%</string>
    <string name="your_score">Your Score</string>
    <string name="calculate">Calculate</string>
    <string name="you">You</string>
    <string name="first_name">First Name</string>
    <string name="history">View History</string>
    <string name="home">View Home</string>
    <string name="me">Me</string>
    <string name="second_name">Second Name</string>
    <string name="love_calculator">Love Calculator</string>
</resources>