<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.fragment.BlankFragment"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image"
        android:src="@drawable/img"
        tools:ignore="MissingConstraints"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textLove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/you_me"
        tools:ignore="MissingConstraints"
    android:textColor="@android:color/black"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintTop_toBottomOf="@id/img"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <!-- TextView для отображения вашего результата -->
    <TextView
        android:id="@+id/yourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_score"
        tools:ignore="MissingConstraints"
    android:textStyle="bold"
    android:textColor="@color/red"
    android:textSize="18sp"
    app:layout_constraintTop_toBottomOf="@id/textLove"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

    <!-- TextView с процентами -->
    <TextView
        android:id="@+id/textPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/_100"
        tools:ignore="MissingConstraints"
    android:textColor="@android:color/black"
    android:textSize="24sp"/>



    <Button
        android:id="@+id/buttonTryAgain"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/try_again"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="502dp" />

    <ImageButton
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/view_history"
        android:src="@drawable/icons8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <ImageButton
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/view_home"
        tools:ignore="MissingConstraints"
    android:src="@drawable/icons8"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
