<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.CalculatorFragment">


    <LinearLayout
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        tools:ignore="ExtraText,UnknownId">

        <ImageView
            android:id="@+id/Image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/image"
            android:src="@drawable/image" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/love_calculator"
            android:textColor="@color/red"
            android:textSize="28sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/firstNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/first_name"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/you"
            android:importantForAutofill="no"
            android:inputType=""
            android:minHeight="56dp"
            android:padding="16dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="VisualLintTextFieldSize" />

        <!-- Текст для второго имени -->
        <TextView
            android:id="@+id/secondNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/second_name"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/secondNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginEnd="36dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            android:hint="@string/me"
            android:inputType=""
            android:minHeight="56dp"
            android:padding="16dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:textStyle="italic"
            tools:ignore="VisualLintTextFieldSize" />


    </LinearLayout>


    <ImageButton
        android:id="@+id/history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/history"
        android:src="@drawable/icons8" />


    <ImageButton
        android:id="@+id/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/home"
        android:src="@drawable/icons8" />


    <Button
        android:id="@+id/calculateButton"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:minHeight="48dp"
        android:text="@string/calculate"
        android:textColor="@android:color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="555dp" />


</androidx.constraintlayout.widget.ConstraintLayout>